Changelog
=========

1.3.7 (unreleased)
------------------

- Nothing changed yet.


1.3.6 (2011-07-05)
------------------

* Updated set of catch exceptions; location error exception is 2.10+
  only. We fall back to attribute error. Also, narrow list to the
  exceptions likely to be raised because of environment errors.
  [malthe]

1.3.5 (2011-07-04)
------------------

* Catch name, type, value and location errors raised while rendering
  content inside a composition, but display a warning (status
  message).

  This allows a user to change to an alternative layout in the case
  that the system is broken.
  [malthe]

* Changed alised topic views such that only the initial batch is shown
  (without pagination). In addition, the headings in these views are
  now clickable and lead to the referenced topic.

  This makes topic views less busy in the general case where an
  already existing topic is shown.

  Note that topics created inside the composition retain their
  existing behavior.
  [malthe]

1.3.4 (2011-07-01)
------------------

* Fixed topic templates so that H2-headings are not marked with
  'documentFirstHeading'.
  [malthe]

1.3.3 (2011-07-01)
------------------

* Fixed topic templates so that headings used are ``H2``, not ``H1``.
  [malthe]

1.3.2 (2011-07-01)
------------------

* Fixed a broken expression in the ``topic_album`` template.
  [malthe]

1.3.1 (2011-06-08)
------------------

* Fixed ``folder_summary_view`` in Collage for Collections in Plone 4 - the 
  macro does not exist anymore. Now the code is copied over here: suboptimal,   
  but no better idea here (w/o touching Plone itself).
  [jensens]

* Make *existing items* view compatible with LinguaPlone. Use the
  navigation root as the default query path, and also supply the
  parameter ``Language``, set to ``"all"``, such that we get any
  object appearing under the current navigation root, regardless of
  session language.
  [malthe]

* Fixed imports that were changed in Plone 4.1.