@@ -4,8 +4,11 @@ Changelog
 1.3.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+* Added conditional include of CMFCore permisssions.zcml for Plone 4.1 support.
+  [thet, tom_gross]
+  
+* Added addional renderer, which respects effective and expiry-date.
+  [tom_gross]
 
 1.3.6 (2011-07-05)
 ------------------
